k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: github-pipeline-agent
  namespace: dis-poc-514020
  annotations:
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"github-pipeline-agent:latest","namespace":"dis-poc-514020"},"fieldPath":"spec.template.spec.containers[?(@.name==\"github-pipeline-agent\")].image"}]'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: github-pipeline-agent
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: github-pipeline-agent
    spec:
      containers:
        - name: github-pipeline-agent
          image: image-registry.openshift-image-registry.svc:5000/dis-poc-514020/github-pipeline-agent:release-1.1
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "500m"
              memory: 1Gi
