k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: github-pipeline-agent
  namespace: dis-poc-514020
spec:
  selector:
    app: github-pipeline-agent
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
